Se generan nuevas pruebas para aumentar cobertura