@@ -3,146 +3,127 @@ package com.citasalud.backend.controller;
 import com.citasalud.backend.DataProvider;
 import com.citasalud.backend.dto.DisponibilidadDTO;
 import com.citasalud.backend.service.DisponibilidadService;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.hateoas.CollectionModel;
-import org.springframework.hateoas.EntityModel;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.mock.web.MockHttpServletRequest;
-import org.springframework.web.context.request.RequestContextHolder;
-import org.springframework.web.context.request.ServletRequestAttributes;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.when;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
 
-@ExtendWith(MockitoExtension.class)
+@WebMvcTest(DisponibilidadController.class)
+@WithMockUser(roles = "MEDICO") // Simula un usuario autenticado para todos los tests
 class DisponibilidadControllerTest {
 
-    @Mock
+    @Autowired
+    private MockMvc mockMvc;
+
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    @MockBean
     private DisponibilidadService disponibilidadService;
 
-    @InjectMocks
-    private DisponibilidadController disponibilidadController;
+    // Mocks para satisfacer el contexto de seguridad
+    @MockBean
+    private com.citasalud.backend.security.JwtTokenProvider jwtTokenProvider;
+    @MockBean
+    private com.citasalud.backend.security.CustomUserDetailsService customUserDetailsService;
 
-    private DisponibilidadDTO dtoValido;
+    private DisponibilidadDTO disponibilidadDTO;
 
     @BeforeEach
     void setUp() {
-        // Necesario para que Spring HATEOAS (linkTo) funcione en un entorno de prueba unitaria
-        MockHttpServletRequest request = new MockHttpServletRequest();
-        RequestContextHolder.setRequestAttributes(new ServletRequestAttributes(request));
-
-        // Crear un DTO base para usar en los tests
-        dtoValido = DataProvider.crearDisponibilidadDTOValida();
-        dtoValido.setDisponibilidadId(1L);
+        disponibilidadDTO = DataProvider.crearDisponibilidadDTOValida();
+        disponibilidadDTO.setDisponibilidadId(1L);
     }
 
-    // --- Tests para agregarFranja ---
-
+    // --- Test para agregarFranja ---
     @Test
-    void agregarFranja_conDatosValidos_debeRetornarCreatedConHateoas() {
-        // GIVEN: El servicio devuelve un DTO con ID, que es lo que el controlador espera.
-        when(disponibilidadService.agregarFranjaHateoas(any(DisponibilidadDTO.class), anyLong())).thenReturn(dtoValido);
+    void agregarFranja_conDatosValidos_debeRetornarCreated() throws Exception {
+        when(disponibilidadService.agregarFranjaHateoas(any(DisponibilidadDTO.class), anyLong())).thenReturn(disponibilidadDTO);
 
-        // WHEN
-        ResponseEntity<EntityModel<DisponibilidadDTO>> response = disponibilidadController.agregarFranja(dtoValido, 1L);
-
-        // THEN
-        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertNotNull(response.getHeaders().getLocation()); // Verificar que la cabecera Location se creó
-        assertTrue(response.getBody().getLinks().hasLink("self"));
-    }
-
-    @Test
-    void agregarFranja_cuandoServicioDevuelveNull_debeLanzarNullPointerException() {
-        // GIVEN: El servicio devuelve null, forzando el fallo del controlador
-        when(disponibilidadService.agregarFranjaHateoas(any(DisponibilidadDTO.class), anyLong())).thenReturn(null);
-
-        // WHEN & THEN: Verificamos que el controlador, al no tener chequeo de nulos, lanza la excepción
-        assertThrows(NullPointerException.class, () -> {
-            disponibilidadController.agregarFranja(new DisponibilidadDTO(), 1L);
-        });
-    }
-
-    // --- Tests para actualizarFranja ---
-
-    @Test
-    void actualizarFranja_cuandoExiste_debeRetornarOkConHateoas() {
-        // GIVEN
-        when(disponibilidadService.actualizarFranjaHateoas(anyLong(), any(DisponibilidadDTO.class))).thenReturn(dtoValido);
-
-        // WHEN
-        ResponseEntity<EntityModel<DisponibilidadDTO>> response = disponibilidadController.actualizarFranja(1L, dtoValido);
-
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertTrue(response.getBody().getLinks().hasLink("self"));
-    }
-
-    @Test
-    void actualizarFranja_cuandoNoExiste_debeLanzarNullPointerException() {
-        // GIVEN: El servicio devuelve null, simulando que no se encontró el recurso
-        when(disponibilidadService.actualizarFranjaHateoas(anyLong(), any(DisponibilidadDTO.class))).thenReturn(null);
-
-        // WHEN & THEN: El controlador actual intenta usar el objeto nulo, por lo que debe lanzar una excepción.
-        assertThrows(NullPointerException.class, () -> {
-            disponibilidadController.actualizarFranja(99L, new DisponibilidadDTO());
-        });
-    }
-
-    // --- Tests para obtenerFranjaPorId ---
-
-    @Test
-    void obtenerFranjaPorId_cuandoNoExiste_debeRetornarNotFound() {
-        // GIVEN
-        when(disponibilidadService.obtenerFranjaPorIdHateoas(99L)).thenReturn(null);
-
-        // WHEN
-        ResponseEntity<EntityModel<DisponibilidadDTO>> response = disponibilidadController.obtenerFranjaPorId(99L);
-
-        // THEN: Tu controlador maneja este caso correctamente
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+        mockMvc.perform(post("/api/franjas/{medicoId}", 1L)
+                        .with(csrf())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(disponibilidadDTO)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.disponibilidadId", is(1)));
     }
 
     // --- Tests para obtenerDisponibilidadesPorMedico ---
-
     @Test
-    void obtenerDisponibilidadesPorMedico_cuandoNoHayResultados_debeRetornarOkConCollectionModelVacio() {
-        // GIVEN
-        when(disponibilidadService.obtenerDisponibilidadesPorMedico(1L)).thenReturn(Collections.emptyList());
+    void obtenerDisponibilidadesPorMedico_cuandoHayResultados_debeRetornarOkConLista() throws Exception {
+        when(disponibilidadService.obtenerDisponibilidadesPorMedico(1L)).thenReturn(List.of(disponibilidadDTO));
 
-        // WHEN
-        ResponseEntity<CollectionModel<EntityModel<DisponibilidadDTO>>> response = disponibilidadController.obtenerDisponibilidadesPorMedico(1L);
-
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertTrue(response.getBody().getContent().isEmpty(), "El contenido del CollectionModel debería estar vacío");
+        mockMvc.perform(get("/api/franjas/medico/{medicoId}", 1L))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$._embedded.disponibilidadDTOList", hasSize(1)))
+                .andExpect(jsonPath("$._embedded.disponibilidadDTOList[0].disponibilidadId", is(1)));
     }
 
-    // --- Tests para eliminarFranja ---
+    // --- Tests para obtenerFranjas (cubre línea roja) ---
+    @Test
+    void obtenerFranjas_cuandoHayResultados_debeRetornarOkConLista() throws Exception {
+        when(disponibilidadService.listarFranjas()).thenReturn(List.of(disponibilidadDTO));
+
+        mockMvc.perform(get("/api/franjas/listarfranjas"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$._embedded.disponibilidadDTOList", hasSize(1)));
+    }
+
+    // --- Tests para obtenerFranjaPorId (cubre línea roja) ---
+    @Test
+    void obtenerFranjaPorId_cuandoExiste_debeRetornarOk() throws Exception {
+        when(disponibilidadService.obtenerFranjaPorIdHateoas(1L)).thenReturn(disponibilidadDTO);
+
+        mockMvc.perform(get("/api/franjas/{idFranja}", 1L))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.disponibilidadId", is(1)));
+    }
 
     @Test
-    void eliminarFranja_debeRetornarNoContent() {
-        // GIVEN
+    void obtenerFranjaPorId_cuandoNoExiste_debeRetornarNotFound() throws Exception {
+        when(disponibilidadService.obtenerFranjaPorIdHateoas(99L)).thenReturn(null);
+
+        mockMvc.perform(get("/api/franjas/{idFranja}", 99L))
+                .andExpect(status().isNotFound());
+    }
+
+    // --- Tests para actualizarFranja ---
+    @Test
+    void actualizarFranja_cuandoExiste_debeRetornarOk() throws Exception {
+        when(disponibilidadService.actualizarFranjaHateoas(eq(1L), any(DisponibilidadDTO.class))).thenReturn(disponibilidadDTO);
+
+        mockMvc.perform(put("/api/franjas/{idFranja}", 1L)
+                        .with(csrf())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(disponibilidadDTO)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.disponibilidadId", is(1)));
+    }
+
+    // --- Test para eliminarFranja ---
+    @Test
+    void eliminarFranja_cuandoExiste_debeRetornarNoContent() throws Exception {
         doNothing().when(disponibilidadService).eliminarFranja(1L);
 
-        // WHEN
-        ResponseEntity<Void> response = disponibilidadController.eliminarFranja(1L);
-
-        // THEN
-        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
+        mockMvc.perform(delete("/api/franjas/{idFranja}", 1L)
+                        .with(csrf()))
+                .andExpect(status().isNoContent());
     }
 }
